# world-wonders-api

./: Cargo.toml  Dockerfile  README.md  data.json  deny.toml  docker-compose.yml  justfile
.github/workflows/: audit.yml  check.yml  prod.yml
config/: base.toml  dev.toml  prod.toml
src/: config.rs  data.rs  error.rs  extractor.rs  extractors.rs  lib.rs  main.rs
src/routes/: categories.rs  docs.rs  mod.rs  utils.rs  wonders.rs
src/web/: docs.rs  handlers_categories.rs  handlers_wonders.rs  mod.rs
tests/: quick_dev.rs  routes_docs.rs  routes_misc.rs  routes_wonders.rs
tests/common/: mod.rs
