[package]
name = "world-wonders-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
httpc-test = "0.1.9"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
strum = "0.26"
strum_macros = "0.26"
rand = "0.8.5"
tower-http = { version = "0.5", features = ["timeout", "trace", "cors"] }
tower_governor = "0.4.2"
thiserror = "1.0.61"
aide = { version = "0.13.4", features = [
  "axum",
  "axum-extra",
  "redoc",
  "scalar",
  "macros",
] }
schemars = "0.8.21"
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum-test = "15.3.0"
axum-valid = { version = "0.18.0", features = [
  "aide",
  "basic",
  "garde",
], default-features = false }
garde = { version = "0.18.0", features = ["derive", "url"] }
axum-prometheus = "0.6.1"

[dev-dependencies]
axum-test = "15.3.0"
chrono = { version = "0.4.38" }
httpc-test = "0.1.9"
pretty_assertions = "1.4.0"
