[package]
name = "world-wonders-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
httpc-test = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = "0.28"
strum_macros = "0.28"
rand = "0.10"
tower-http = { version = "0.6", features = ["timeout", "trace", "cors"] }
tower_governor = "0.5"
thiserror = "2.0"
aide = { version = "0.13", features = [
  "axum",
  "axum-extra",
  "redoc",
  "scalar",
  "macros",
] }
schemars = "0.8"
axum-jsonschema = { version = "0.8", features = ["aide"] }
axum-valid = { version = "0.21", features = [
  "aide",
  "basic",
  "garde",
], default-features = false }
garde = { version = "0.20", features = ["derive", "url"] }
axum-prometheus = "0.10"
config = { version = "0.15", default-features = false, features = ["toml"] }

[dev-dependencies]
axum-test = "16.4"
chrono = { version = "0.4.*" }
clearurls = "0.0.*"
httpc-test = "0.1.*"
pretty_assertions = "1.4.*"
